AM_CXXFLAGS=-Wall -std=gnu++0x

bin_PROGRAMS=gridgain-data-example gridgain-compute-example

gridgain_data_example_SOURCES=src/gridclientapiexample.cpp src/gridclientdataexample.cpp
gridgain_data_example_LDADD=-L/usr/local/lib -lgridgain-client

gridgain_compute_example_SOURCES=src/gridclientapiexample.cpp src/gridclientcomputeexample.cpp
gridgain_compute_example_LDADD=-L/usr/local/lib -lgridgain-client
