ACLOCAL_AMFLAGS=-Im4

# These files will end up in the install include directory
# For example, /usr/include
nobase_include_HEADERS = gridgain/gridclient.hpp gridgain/gridclientcompute.hpp gridgain/gridclientconfiguration.hpp gridgain/gridclientdata.hpp gridgain/gridclientdataaffinity.hpp gridgain/gridclientdatametrics.hpp gridgain/gridclientexception.hpp gridgain/gridclientfactory.hpp gridgain/gridclientloadbalancer.hpp gridgain/gridclientmodel.hpp gridgain/gridclientnode.hpp gridgain/gridclientnodemetricsbean.hpp gridgain/gridclientpredicate.hpp gridgain/gridclientprotocol.hpp gridgain/gridclientprotocolconfiguration.hpp gridgain/gridclienttopologylistener.hpp gridgain/gridclienttypedef.hpp gridgain/gridclientuuid.hpp gridgain/gridclientvariant.hpp gridgain/gridcommon.hpp gridgain/gridconf.hpp gridgain/gridfuture.hpp gridgain/gridgain.hpp gridgain/gridhasheableobject.hpp gridgain/gridsocketaddress.hpp gridgain/gridclientcacheflag.hpp gridgain/gridclientdataconfiguration.hpp\
    gridgain/loadbalancer/gridclientloadbalancer.hpp gridgain/loadbalancer/gridclientrandombalancer.hpp gridgain/loadbalancer/gridclientroundrobinbalancer.hpp gridgain/loadbalancer/gridclientrandomrouterbalancer.hpp\
    gridgain/gridclienthash.hpp gridgain/gridportable.hpp gridgain/gridportablewriter.hpp gridgain/gridportablereader.hpp gridgain/gridportableserializer.hpp
